# dupefinder

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  design.md  quickstart.md  security.md
examples/: basic_usage.py  cancel_scan.py  ci_fail_on_duplicates.py  cli_examples.md  fastapi_like_integration.py  ignore_small_files.py  progress_callback.py  scan_folder.py  sqlite_cache.py
src/dupefinder/: __init__.py  __main__.py  api.py  cache.py  cli.py  constants.py  engine.py  errors.py  events.py  filters.py  grouping.py  hashing.py  models.py  report.py  safety.py  scanner.py
tests/: __init__.py  test_cache.py  test_cli.py  test_engine.py  test_filters.py  test_grouping.py  test_hardening.py  test_hashing.py  test_models.py  test_packaging.py  test_report.py  test_safety.py  test_scanner.py  test_schema.py  test_workflows.py
