[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dupefinder"
version = "0.1.0"
description = "A simple, safe, zero-dependency duplicate file finder for Python."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name" }
]
keywords = ["duplicates", "files", "hash", "finder", "zero-dependency"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/dupefinder"
Repository = "https://github.com/your-username/dupefinder"
Issues = "https://github.com/your-username/dupefinder/issues"

[project.scripts]
dupefinder = "dupefinder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
